# kiltxt

./: .gitignore  Cargo.toml
artifacts/: spiritnet-1.7.3-1.wasm
artifacts/metadata/: mash-10110.scale  spirit-10101-as-10730.scale  spirit-10730-rescue.scale
runtime_upgrades/: Cargo.toml  README.md  lib.rs
runtime_upgrades/artifacts/: local-pere10900rc0.scale  local.scale  pere10900.scale  peregrine_10900rc0.wasm  standalone_local_10801.scale
runtime_upgrades/src/: cli.rs  kilt.rs  main.rs
runtime_upgrades/src/extrinsics/: did.rs  mod.rs  upgrade.rs  utility.rs
runtime_upgrades/src/migrations/: mod.rs
runtime_upgrades/src/migrations/eth/: mod.rs
runtime_upgrades/src/upgrade/: mod.rs
runtime_upgrades/src/utility/: mod.rs
src/: calls.rs  extrinsic_param.rs  main.rs
