[package]
edition = "2021"
name = "tx-builder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.7", features = ["derive"]}
hex = "0.4.3"
hex-literal = "0.3.4"
parity-scale-codec = "3.2.1"
sp-core = "6.0.0"
sp-keyring = "6.0.0"
sp-runtime = "6.0.0"
subxt = "0.24.0"
tokio = {version = "1.8", features = ["rt-multi-thread", "macros", "time"]}
tracing-subscriber = "0.3.15"
