[package]
name = "create-account-links"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.61"
tokio = { version = "1.21.1", features = ["full"] }
subxt = "0.25.0"
sp-keyring = "*"
tiny-bip39 = "1.0.0"
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[features]
default = ["pre-eth-migration"]
pre-eth-migration = []
post-eth-migration = []
