[package]
name = "create-account-links"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
clap = {version = "4.0.29", features = ["derive", "wrap_help"]}
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
# hex encoded metadata to bytes
hex = "0.4.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
sp-keyring = "*"
sp-core = "*"
subxt = "0.25.0"
tiny-bip39 = "1.0.0"
tokio = { version = "1.23.0", features = ["full"] }

[features]
default = []
10801 = []
